--- a/app.json
+++ b/app.json
@@ -21,10 +21,19 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.holowjades.votebem"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "8261cb5d-db4a-43e0-b71e-032f0459d983"
+      }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
