--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:web": "npx expo export --platform web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -18,6 +19,7 @@
     "expo": "~54.0.23",
     "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "lodash": "^4.17.21",
     "react": "19.1.0",
     "react-dom": "19.1.0",
