--- a/app.json
+++ b/app.json
@@ -7,14 +7,15 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "ios": {
-      "supportsTablet": true
-    },
+
+    "ios": { "supportsTablet": true },
+
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
@@ -24,20 +25,26 @@
       "predictiveBackGestureEnabled": false,
       "package": "com.holowjades.votebem"
     },
+
     "web": {
-      "favicon": "./assets/logo1.png"
+      "favicon": "./assets/logo1.png",
+      "name": "My-Vote",
+      "shortName": "My-Vote",
+      "meta": {
+        "themeColor": "#4F46E5"
+      }
     },
+
     "extra": {
       "eas": {
         "projectId": "8261cb5d-db4a-43e0-b71e-032f0459d983"
       }
     },
-    "plugins": [
-      "expo-font"
-    ],
-    "runtimeVersion": {
-      "policy": "appVersion"
-    },
+
+    "plugins": ["expo-font"],
+
+    "runtimeVersion": { "policy": "appVersion" },
+
     "updates": {
       "url": "https://u.expo.dev/8261cb5d-db4a-43e0-b71e-032f0459d983"
     }
